WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240956
AX: -Wswitch warnings in AXObjectCacheAtspi.cpp
https://bugs.webkit.org/show_bug.cgi?id=240956
Summary
AX: -Wswitch warnings in AXObjectCacheAtspi.cpp
Michael Catanzaro
Reported
2022-05-26 08:34:26 PDT
[1284/2501] Building CXX object Source/WebCore/CMakeFiles/...ivedSources/unified-sources/UnifiedSource-aba958d6-5.cpp.o In file included from /home/mcatanzaro/Projects/WebKit/WebKitBuild/GNOME-gtk3/WebCore/DerivedSources/unified-sources/UnifiedSource-aba958d6-5.cpp:3: /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp: In member function ‘void WebCore::AXObjectCache::postPlatformNotification(WebCore::AXCoreObject*, AXNotification)’: /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp:74:12: warning: enumeration value ‘AXGrabbedStateChanged’ not handled in switch [-Wswitch] 74 | switch (notification) { | ^ /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp:74:12: warning: enumeration value ‘AXPositionInSetChanged’ not handled in switch [-Wswitch] I *assume* we don't need to handle these, so I'll suppress them for now. If they are important to handle, hopefully someone who sees this bug will notice.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-26 08:34:35 PDT
<
rdar://problem/93971992
>
Michael Catanzaro
Comment 2
2022-05-26 09:17:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1052
EWS
Comment 3
2022-05-26 15:16:17 PDT
Committed
r294901
(
251024@main
): <
https://commits.webkit.org/251024@main
> Reviewed commits have been landed. Closing PR #1052 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug