AX: -Wswitch warnings in AXObjectCacheAtspi.cpp https://bugs.webkit.org/show_bug.cgi?id=240956

Patch by Michael Catanzaro <mcatanzaro@redhat.com> on 2022-05-26
Reviewed by Adrian Perez de Castro.

* Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp:
(WebCore::AXObjectCache::postPlatformNotification):

Canonical link: https://commits.webkit.org/251024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294901 268f45cc-cd09-0410-ab3c-d52691b4dbfc