Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp
@@ -195,6 +195,10 @@ void AXObjectCache::postPlatformNotification(AXCoreObject* coreObject, AXNotific
         break;
     case AXDraggingExitedDropZone:
         break;
+    case AXGrabbedStateChanged:
+        break;
+    case AXPositionInSetChanged:
+        break;
     }
 }
 
